--- a/src/styles/02_components/_spinner.scss
+++ b/src/styles/02_components/_spinner.scss
@@ -5,6 +5,7 @@
     height: calc(100vh - 80px);
     width: 100vw;
     background: $dark-blue;
+    z-index: 10;
     #spinner{
         position: absolute;
         top: 50%;
