--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -145,6 +145,7 @@ header {
   height: calc(100vh - 80px);
   width: 100vw;
   background: #090B0B;
+  z-index: 10;
 }
 
 #spinner-curtain #spinner {
@@ -241,6 +242,8 @@ main .welcome-title {
 footer {
   padding: 16px 24px;
   width: 100%;
+  position: relative;
+  z-index: 100;
 }
 
 footer .credit-section {
